# Black_Mamba

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: DECISIONS.md  INCIDENT_LOG.md  KALSHI_API_NOTES.md  RUNBOOK.md
src/black_mamba/: config.py  main.py
src/black_mamba/observability/: logger.py
src/black_mamba/storage/: db.py  models.py
src/black_mamba/storage/migrations/: env.py
src/black_mamba/storage/migrations/versions/: 0001_initial_schema.py
tests/unit/: test_config.py  test_logger.py  test_main.py
