[project]
name = "black-mamba"
version = "0.1.0"
description = "Autonomous trading agent for Kalshi daily high-temperature markets (LAX, SFO, PHX)"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Eddie Desane" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
black-mamba = "black_mamba.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/black_mamba"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ASYNC",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"src/black_mamba/storage/migrations/**/*.py" = ["E501", "N999"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
exclude = [
    "src/black_mamba/storage/migrations/versions/",
]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
